<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="@dimen/card_elevation"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/relative_layout_padding_card_view">

        <ImageView
            android:id="@+id/icon_repo"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_repo"
            android:layout_marginTop="@dimen/icon_margin"
            android:contentDescription="@string/repository_icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/icon_repo"
            android:orientation="vertical">

            <TextView
                android:id="@+id/repo_full_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repository_name_test_string"
                android:textSize="@dimen/list_item_large_text_size"
                android:padding="@dimen/small_padding"/>

            <TextView
                android:id="@+id/repo_description_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_test_string"
                android:textSize="@dimen/list_item_large_text_size"
                android:padding="@dimen/small_padding"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/repo_language_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/language_test_string"
                    android:textSize="@dimen/list_item_small_text_size"
                    android:padding="@dimen/small_padding"/>

                <TextView
                    android:id="@+id/repo_updated_at_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_update_test_string"
                    android:textSize="@dimen/list_item_small_text_size"
                    android:padding="@dimen/small_padding"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>