<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:clickable="true"
    android:focusable="true">

    <GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchMode="columnWidth"
        android:columnCount="3"
        android:rowCount="2"
        android:layout_centerHorizontal="true">

        <!-- Watchers -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:layout_margin="@dimen/small_padding">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/custom_left_container"
                android:padding="@dimen/small_padding">

                <ImageView
                    android:id="@+id/watch_iv"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/ic_watch"
                    android:layout_marginTop="@dimen/icon_small_margin"
                    android:contentDescription="@string/watchers_icon" />
                <TextView
                    android:id="@+id/watch_title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/watch"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/custom_right_container"
                android:padding="@dimen/small_padding">
                <TextView
                    android:id="@+id/watch_value_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"/>
            </LinearLayout>
        </LinearLayout>

        <!-- Open Issues -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:layout_margin="@dimen/small_padding"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/custom_left_container"
                android:padding="@dimen/small_padding">

                <ImageView
                    android:id="@+id/open_issue_iv"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/ic_open_issue"
                    android:layout_marginTop="@dimen/icon_small_margin"
                    android:contentDescription="@string/open_issues_icon" />

                <TextView
                    android:id="@+id/issues_title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/open_issues"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/custom_right_container"
                android:padding="@dimen/small_padding">
                <TextView
                    android:id="@+id/issues_value_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"/>
            </LinearLayout>
        </LinearLayout>

        <!-- Forks -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:layout_margin="@dimen/small_padding"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/custom_left_container"
                android:padding="@dimen/small_padding">

                <ImageView
                    android:id="@+id/fork_iv"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/ic_fork"
                    android:layout_marginTop="@dimen/icon_small_margin"
                    android:contentDescription="@string/forks_icon" />

                <TextView
                    android:id="@+id/fork_title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fork"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/custom_right_container"
                android:padding="@dimen/small_padding">
                <TextView
                    android:id="@+id/fork_value_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"/>
            </LinearLayout>
        </LinearLayout>

        <!-- Stars -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:layout_margin="@dimen/small_padding"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/custom_left_container"
                android:padding="@dimen/small_padding">

                <ImageView
                    android:id="@+id/star_iv"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/ic_star"
                    android:layout_marginTop="@dimen/icon_small_margin"
                    android:contentDescription="@string/stars_icon" />

                <TextView
                    android:id="@+id/star_title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/star"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/custom_right_container"
                android:padding="@dimen/small_padding">
                <TextView
                    android:id="@+id/star_value_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"/>
            </LinearLayout>
        </LinearLayout>
    </GridLayout>

    <!-- README -->
    <LinearLayout
        android:layout_below="@+id/grid_layout"
        android:id="@+id/readme_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:layout_margin="@dimen/small_padding"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_top_container"
            android:padding="@dimen/small_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/readme_md"/>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/custom_bottom_container"
            android:padding="@dimen/small_padding">

            <TextView
                android:id="@+id/readme_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/read_me_text_view_margin"
                android:layout_marginBottom="@dimen/read_me_text_view_margin"
                android:text=""/>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>